Ajout listes, todo -> sauvegarde pile contenu avec listegit add .

--- a/abcd.html
+++ b/abcd.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//ENhttp://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html>
-<head><title>dsfsdfsd</title></head>
-<h2>zefzef</h2>
-<h3>ezfze</h3>
+<head><title>fzefze</title></head>
+<h2>zefze</h2>
+<h3>zefze</h3>
 <p>zefzef</p>
-<h3>ezfze</h3>
-<p>zefzef</p>
-<h2>zefzef</h2>
-<h3>ezfze</h3>
-<p>zefzef</p>
-<p>zefzef</p>
-</html>
+<p>zefzef zefzef zefz efze fz ef zef ze f ze fze</p>
+<ul>
+<li>ezfzefze</li><li>ezfzefze</li><li>ezfzefze</li></ul></html>
